lib/analysis/analysis_ffi.dart

// ignore_for_file: unused_field

import 'dart:ffi';
import 'dart:io';
import 'package:ffi/ffi.dart';

import '../app_paths.dart';
import '../utils/file_lock.dart';
import 'analysis_cache.dart';

// ===========================================================================
// FFI Struct definitions — mirror C++ structs in video_renderer_plugin.h
// ===========================================================================

final class NakiAnalysisSummary extends Struct {
  @Int32()
  external int loaded;
  @Int32()
  external int frameCount;
  @Int32()
  external int packetCount;
  @Int32()
  external int naluCount;
  @Int32()
  external int videoWidth;
  @Int32()
  external int videoHeight;
  @Int32()
  external int timeBaseNum;
  @Int32()
  external int timeBaseDen;
  @Int32()
  external int currentFrameIdx;
  @Int32()
  external int codec;

  // Reserved native ABI padding.
  @Array(6)
  external Array<Int32> _reserved;
}

final class NakiFrameInfo extends Struct {
  @Int32()
  external int poc;
  @Int32()
  external int temporalId;
  @Int32()
  external int sliceType;
  @Int32()
  external int nalType;
  @Int32()
  external int avgQp;
  @Int32()
  external int numRefL0;
  @Int32()
  external int numRefL1;

  @Array(15)
  external Array<Int32> refPocsL0;
  @Array(15)
  external Array<Int32> refPocsL1;

  @Int64()
  external int pts;
  @Int64()
  external int dts;
  @Int32()
  external int packetSize;
  @Int32()
  external int keyframe;

  // Reserved native ABI padding.
  @Array(2)
  external Array<Int32> _reserved;
}

final class NakiNaluInfo extends Struct {
  @Uint64()
  external int offset;
  @Uint32()
  external int size;
  @Uint8()
  external int nalType;
  @Uint8()
  external int temporalId;
  @Uint8()
  external int layerId;
  @Uint8()
  external int flags;
}

final class NakiFrameBucket extends Struct {
  @Int32()
  external int startFrame;
  @Int32()
  external int frameCount;
  @Int32()
  external int packetSizeMin;
  @Int32()
  external int packetSizeMax;
  @Int64()
  external int packetSizeSum;
  @Int32()
  external int qpMin;
  @Int32()
  external int qpMax;
  @Int64()
  external int qpSum;
  @Int32()
  external int keyframeCount;

  @Array(3)
  external Array<Int32> _reserved;
}

final class NakiOverlayState extends Struct {
  @Int32()
  external int showCuGrid;
  @Int32()
  external int showPredMode;
  @Int32()
  external int showQpHeatmap;
  @Int32()
  external int showPredLines;
  @Int32()
  external int showCuBitCostHeatmap;
  @Int32()
  external int opacityPermille;
  @Int32()
  external int mode;
  @Int32()
  external int trackFileId;
  @Int32()
  external int _reserved;
}

final class NakiAnalysisGenerationJobResult extends Struct {
  @Uint64()
  external int jobId;
  @Int32()
  external int kind;
  @Int32()
  external int ok;
  @Int32()
  external int status;
  @Int32()
  external int startFrame;
  @Int32()
  external int endFrame;
  @Int32()
  external int priority;
  @Int32()
  external int _reserved;
  @Array(65)
  external Array<Int8> hash;
  @Array(256)
  external Array<Int8> message;
}

final class NakiAnalysisGenerationServiceStats extends Struct {
  @Int32()
  external int workerCount;
  @Int32()
  external int activeWorkers;
  @Int32()
  external int pendingJobs;
  @Int32()
  external int runningJobs;
  @Int32()
  external int completedJobs;
  @Int32()
  external int failedJobs;
  @Int32()
  external int dedupedJobs;
  @Int32()
  external int backpressureDropCount;
  @Uint64()
  external int submittedJobs;
}

final class NakiQualityDistribution extends Struct {
  @Uint64()
  external int count;
  @Double()
  external double mean;
  @Double()
  external double p95;
  @Double()
  external double maximum;
}

final class NakiQualitySummary extends Struct {
  @Uint32()
  external int schemaVersion;
  @Int32()
  external int videoWidth;
  @Int32()
  external int videoHeight;
  @Int32()
  external int bitDepth;
  @Int64()
  external int sampleIntervalUs;
  @Uint32()
  external int maxSamples;
  @Int32()
  external int truncated;
  @Uint64()
  external int unsupportedPixelFrames;
  @Uint64()
  external int sampleCount;
  external NakiQualityDistribution blockiness;
  external NakiQualityDistribution banding;
  external NakiQualityDistribution blur;
  external NakiQualityDistribution noise;
  external NakiQualityDistribution flicker;
}

final class NakiQualitySample extends Struct {
  @Uint64()
  external int sampleIndex;
  @Uint64()
  external int decodedFrameIndex;
  @Int64()
  external int ptsUs;
  @Double()
  external double blockiness;
  @Double()
  external double banding;
  @Double()
  external double blur;
  @Double()
  external double noise;
  @Double()
  external double flicker;
  @Double()
  external double averageQp;
}

// ===========================================================================
// FFI function typedefs
// ===========================================================================

typedef _SetOverlayNative = Void Function(Pointer<NakiOverlayState>);
typedef _SetOverlayDart = void Function(Pointer<NakiOverlayState>);

typedef _SetOverlayTrackNative = Int32 Function(Int32, Pointer<Utf8>);
typedef _SetOverlayTrackDart = int Function(int, Pointer<Utf8>);

typedef _ClearOverlayTracksNative = Void Function();
typedef _ClearOverlayTracksDart = void Function();

typedef _GenerateVac2BaseNative =
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Int64);
typedef _GenerateVac2BaseDart =
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, int);

typedef _GenerateVac2OverlayChunkNative =
    Int32 Function(
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Int32,
      Int32,
      Int64,
    );
typedef _GenerateVac2OverlayChunkDart =
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, int, int, int);

typedef _SubmitVac2OverlayChunkNative =
    Uint64 Function(
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Int32,
      Int32,
      Int64,
      Int32,
    );
typedef _SubmitVac2OverlayChunkDart =
    int Function(
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      int,
      int,
      int,
      int,
    );

typedef _PollGenerationJobsNative =
    Int32 Function(Pointer<NakiAnalysisGenerationJobResult>, Int32);
typedef _PollGenerationJobsDart =
    int Function(Pointer<NakiAnalysisGenerationJobResult>, int);

typedef _GetGenerationServiceStatsNative =
    Void Function(Pointer<NakiAnalysisGenerationServiceStats>);
typedef _GetGenerationServiceStatsDart =
    void Function(Pointer<NakiAnalysisGenerationServiceStats>);

typedef _OpenNative = Pointer<Void> Function(Pointer<Utf8>);
typedef _OpenDart = Pointer<Void> Function(Pointer<Utf8>);

typedef _CloseNative = Void Function(Pointer<Void>);
typedef _CloseDart = void Function(Pointer<Void>);

typedef _HandleGetSummaryNative =
    Pointer<NakiAnalysisSummary> Function(Pointer<Void>);
typedef _HandleGetSummaryDart =
    Pointer<NakiAnalysisSummary> Function(Pointer<Void>);

typedef _HandleFrameIndexForTimestampNative =
    Int32 Function(Pointer<Void>, Int64, Int64);
typedef _HandleFrameIndexForTimestampDart =
    int Function(Pointer<Void>, int, int);

typedef _HandleFrameIndexForSourcePacketNative =
    Int32 Function(Pointer<Void>, Int64, Int32, Int32, Int64, Int64);
typedef _HandleFrameIndexForSourcePacketDart =
    int Function(Pointer<Void>, int, int, int, int, int);

typedef _HandleGetFramesRangeNative =
    Int32 Function(Pointer<Void>, Int32, Pointer<NakiFrameInfo>, Int32);
typedef _HandleGetFramesRangeDart =
    int Function(Pointer<Void>, int, Pointer<NakiFrameInfo>, int);

typedef _HandleGetNalusRangeNative =
    Int32 Function(Pointer<Void>, Int32, Pointer<NakiNaluInfo>, Int32);
typedef _HandleGetNalusRangeDart =
    int Function(Pointer<Void>, int, Pointer<NakiNaluInfo>, int);

typedef _HandleIndexMapNative = Int32 Function(Pointer<Void>, Int32);
typedef _HandleIndexMapDart = int Function(Pointer<Void>, int);

typedef _HandleGetFrameBucketsNative =
    Int32 Function(
      Pointer<Void>,
      Int32,
      Int32,
      Pointer<NakiFrameBucket>,
      Int32,
    );
typedef _HandleGetFrameBucketsDart =
    int Function(Pointer<Void>, int, int, Pointer<NakiFrameBucket>, int);

typedef _AbiIntNative = Int32 Function();
typedef _AbiIntDart = int Function();

typedef _LastErrorNative = Int32 Function(Pointer<Int8>, Int32);
typedef _LastErrorDart = int Function(Pointer<Int8>, int);

typedef _QualityAnalyzeNative =
    Pointer<Void> Function(Pointer<Utf8>, Int64, Uint32);
typedef _QualityAnalyzeDart = Pointer<Void> Function(Pointer<Utf8>, int, int);

typedef _QualityCloseNative = Void Function(Pointer<Void>);
typedef _QualityCloseDart = void Function(Pointer<Void>);

typedef _QualityGetSummaryNative =
    Int32 Function(Pointer<Void>, Pointer<NakiQualitySummary>);
typedef _QualityGetSummaryDart =
    int Function(Pointer<Void>, Pointer<NakiQualitySummary>);

typedef _QualityGetSamplesNative =
    Int32 Function(Pointer<Void>, Int32, Pointer<NakiQualitySample>, Int32);
typedef _QualityGetSamplesDart =
    int Function(Pointer<Void>, int, Pointer<NakiQualitySample>, int);

// ===========================================================================
// Native symbol lookup
// ===========================================================================

const int _expectedAnalysisAbiVersion = 1;

class AnalysisFfiUnavailable implements Exception {
  final String message;
  final Object? cause;

  const AnalysisFfiUnavailable(this.message, [this.cause]);

  @override
  String toString() => cause == null
      ? 'AnalysisFfiUnavailable: $message'
      : 'AnalysisFfiUnavailable: $message ($cause)';
}

class _AnalysisNativeBindings {
  _AnalysisNativeBindings._(DynamicLibrary library) {
    abiVersion = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_abi_version',
    );
    sizeofSummary = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_sizeof_summary',
    );
    sizeofFrameInfo = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_sizeof_frame_info',
    );
    sizeofNaluInfo = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_sizeof_nalu_info',
    );
    sizeofFrameBucket = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_sizeof_frame_bucket',
    );
    sizeofOverlayState = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
      'naki_analysis_sizeof_overlay_state',
    );
    lastError = library.lookupFunction<_LastErrorNative, _LastErrorDart>(
      'naki_analysis_last_error',
    );
